--- a/demo02/pom.xml
+++ b/demo02/pom.xml
@@ -3,23 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <groupId>com.tygq</groupId>
+        <artifactId>pratice</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.tygq</groupId>
-    <artifactId>pratice</artifactId>
+    <artifactId>demo02</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>pratice</name>
-    <packaging>pom</packaging>
-    <description>pratice for tygq</description>
-
-    <!--聚合工程，所有的子工程都要写在这里-->
-    <modules>
-        <module>demo01</module>
-        <module>demo02</module>
-    </modules>
+    <name>demo02</name>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -30,11 +23,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <!--渲染引擎-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
         <!--spring mvc-->
         <dependency>
@@ -51,12 +39,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
-        </dependency>
-        <!--sb自带的测试-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
         <!--热加载-->
         <dependency>
