--- a/demo03/pom.xml
+++ b/demo03/pom.xml
@@ -3,24 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <groupId>com.tygq</groupId>
+        <artifactId>pratice</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.tygq</groupId>
-    <artifactId>pratice</artifactId>
+    <artifactId>demo03</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>pratice</name>
-    <packaging>pom</packaging>
-    <description>pratice for tygq</description>
-
-    <!--聚合工程，所有的子工程都要写在这里-->
-    <modules>
-        <module>demo01</module>
-        <module>demo02</module>
-        <module>demo03</module>
-    </modules>
+    <name>demo03</name>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
